--- a/example/index.html
+++ b/example/index.html
@@ -7,16 +7,16 @@
 <body>
 <div class="app"
      style="height: 1200px;background-color: #ccc;width: 400px;margin: 0 auto;"
-     v-infinite-scroll="loadMore()"
+     v-infinite-scroll="loadMore"
      infinite-scroll-disabled="busy"
      infinite-scroll-distance="10">
 </div>
-<script src="https://cdn.css.net/libs/vue/1.0.10/vue.min.js"></script>
+<script src="https://cdn.css.net/libs/vue/2.0.3/vue.js"></script>
 <script src="../vue-infinite-scroll.js"></script>
 <script>
   var app = document.querySelector('.app')
   new Vue({
-    el: 'body',
+    el: app,
     data: function () {
       return {busy: false}
     },
@@ -26,6 +26,7 @@
         self.busy = true;
         console.log('loading... ' + new Date());
         setTimeout(function () {
+          var app = document.querySelector('.app')
           var height = app.clientHeight;
           app.style.height = height + 300 + 'px';
           console.log('end... ' + new Date());
